# euler2d_kokkos

./: .clang-format  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CudaTimer.h  HydroBaseFunctor.h  HydroRun.cpp  HydroRunFunctors.h  LICENSE  REUSE.toml  Readme.md  Timer.cpp  Timer.h  _typos.toml  test_implode_big.ini
.github/workflows/: ci.yml  openmp.yml
cmake/: build_or_find_kokkos.cmake  dump_cmake_variables.cmake
config/: ConfigMap.cpp  ConfigMap.h
config/inih/: INIReader.cpp  INIReader.h  INIReaderTest.cpp  ini.cpp  ini.h
misc/: plot_data.py
src/: CMakeLists.txt  ComputeRadialProfileFunctor.h  CudaTimer.h  HydroBaseFunctor.h  HydroParams.cpp  HydroParams.h  HydroRun.cpp  HydroRun.h  HydroRunFunctors.h  SimpleTimer.cpp  SimpleTimer.h  Timer.cpp  Timer.h  hydro_common.h  kokkos_shared.cpp  kokkos_shared.h  main.cpp  real_type.h  test_blast.ini  test_blast_large.ini  test_discontinuity.ini  test_four_quadrant.ini  test_implode.ini  test_implode_big.ini  test_shocked_bubble.ini
src/cnpy/: cnpy.cpp  cnpy.h  cnpy_io.h
src/sedov_blast/: CMakeLists.txt  README.md  sedov_plot.py  test_sedov_blast_2d.ini
src/sedov_blast/sedov_fortran/: CMakeLists.txt  README  README_kanop.md  sedov3_qp.f90  sedov_library_qp.f90
